<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jarrash.mahmoud.gpacalculator.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/cGpa"
        app:layout_constraintEnd_toStartOf="@+id/cGpaTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cGpaTxt"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/gpaHint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/courseTitleEditTxt1"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/courseTitle"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/creditsToggleButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ToggleButton
        android:id="@+id/creditsToggleButton1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textOff="@string/toggleBtnOff"
        android:textOn="@string/toggleBtnOn"
        app:layout_constraintEnd_toStartOf="@+id/gradeSpinner1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseTitleEditTxt1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/gradeSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:entries="@array/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsToggleButton1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/courseTitleEditTxt2"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/courseTitle"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/creditsToggleButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleEditTxt1" />

    <ToggleButton
        android:id="@+id/creditsToggleButton2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textOff="@string/toggleBtnOff"
        android:textOn="@string/toggleBtnOn"
        app:layout_constraintEnd_toStartOf="@+id/gradeSpinner1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseTitleEditTxt1"
        app:layout_constraintTop_toBottomOf="@+id/creditsToggleButton1" />

    <Spinner
        android:id="@+id/gradeSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:entries="@array/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsToggleButton1"
        app:layout_constraintTop_toBottomOf="@+id/gradeSpinner1" />

    <EditText
        android:id="@+id/courseTitleEditTxt3"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/courseTitle"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/creditsToggleButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleEditTxt2" />

    <ToggleButton
        android:id="@+id/creditsToggleButton3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textOff="@string/toggleBtnOff"
        android:textOn="@string/toggleBtnOn"
        app:layout_constraintEnd_toStartOf="@+id/gradeSpinner1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseTitleEditTxt1"
        app:layout_constraintTop_toBottomOf="@+id/creditsToggleButton2" />

    <Spinner
        android:id="@+id/gradeSpinner3"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:entries="@array/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsToggleButton1"
        app:layout_constraintTop_toBottomOf="@+id/gradeSpinner2" />

    <EditText
        android:id="@+id/courseTitleEditTxt4"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/courseTitle"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/creditsToggleButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleEditTxt3" />

    <ToggleButton
        android:id="@+id/creditsToggleButton4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textOff="@string/toggleBtnOff"
        android:textOn="@string/toggleBtnOn"
        app:layout_constraintEnd_toStartOf="@+id/gradeSpinner1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseTitleEditTxt1"
        app:layout_constraintTop_toBottomOf="@+id/creditsToggleButton3" />

    <Spinner
        android:id="@+id/gradeSpinner4"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:entries="@array/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsToggleButton1"
        app:layout_constraintTop_toBottomOf="@+id/gradeSpinner3" />

    <EditText
        android:id="@+id/courseTitleEditTxt5"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/courseTitle"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/creditsToggleButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleEditTxt4" />

    <ToggleButton
        android:id="@+id/creditsToggleButton5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textOff="@string/toggleBtnOff"
        android:textOn="@string/toggleBtnOn"
        app:layout_constraintEnd_toStartOf="@+id/gradeSpinner1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseTitleEditTxt1"
        app:layout_constraintTop_toBottomOf="@+id/creditsToggleButton4" />

    <Spinner
        android:id="@+id/gradeSpinner5"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:entries="@array/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsToggleButton1"
        app:layout_constraintTop_toBottomOf="@+id/gradeSpinner4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="calculateBtnClicked"
        android:text="@string/btn_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/gpaTypeRadioGroup"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radiobutton1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton2" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/showMsgCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/checkboxTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditsToggleButton5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/cumulative_credits"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/cCreditsTxt"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/credits_hint"
        android:inputType="textPersonName|number"
        app:layout_constraintStart_toStartOf="@+id/cGpaTxt"
        app:layout_constraintTop_toBottomOf="@+id/cGpaTxt" />


</android.support.constraint.ConstraintLayout>
